style.css
body {
    background: rgb(116,196,223)
   
  }
  
  .navbar {
    max-height: 50px;
  }
  .navigation .navbar-brand {
    color: rgb(153, 152, 211);
    margin-left: 0px;
    padding: inherit;
    font-weight: bold;
    background-color: rgb(255, 255, 255);
    font-family: cochin;
  }
  .navbar {
    background-color: rgb(255, 255, 255);
    font-size: 40px; 
  }
  .active, .dropdown-menu .dropdown-item:active a:hover {
    background-color: rgb(138, 117, 117);
  }
  .dropdown-item {
    color: rgb(52, 150, 165, 0.75);
  }
  .dropdown .dropdown-menu .dropdown-item:active, .dropdown .dropdown-menu .dropdown-item:hover {
    background-color: rgb(52, 150, 165, 0.75);
  }
  
  .nav-link:hover {
    background-color:rgb(52, 150, 165, 0.75);
   }
  
  .navbar-brand:hover {
  color: rgb(45, 158, 175);
  }
  a {
    color: rgb(231, 231, 231);
    font-size: 15px;
  }
  
  img{
    width:100%;
    height:100%;
  }
  .active, .panel:hover {
    border-color:rgb(52, 149, 165);
    border-style: solid;
    
  }
  .vizualization {
    width:50%;
    height:50%;
  }
  
  .title {
    color: rgb(52, 149, 165);
    font-family: cochin;
    font-weight: bolder;
    padding-top: 10px;
  }
  
  p {
  color: rgb(52, 149, 165);
  font-family: 'segoe ui';
  font-size: 16px;
  }
  
  .box {
    margin-top: 50px;
    margin-bottom: 60px;
    padding: 10px 30px 10px;
    color: #ffffff;
    background-color: rgb(255, 255, 255);
  
  }
  
  .table {
    font-size: 15px;
    border-top-color: rgb(255, 255, 255);
  }
  
  footer {
  background-color: #000000;
  border-top-style: solid;
  border-top-width: 5px;
  border-top-color: rgb(37, 80, 87);
  color: rgb(171, 222, 226);
  min-height: 50px;
  font-family:  Georgia, 'Times New Roman', Times, serif;
  font-size: 10px;
  text-align: center;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  padding-top: 15px;
  }
  
  @media(max-width: 992px) {
    .navbar-expand-lg {
    background-color: #000000;
    }
    .navbar {
      max-height: none;
      padding: inherit;
    }
    .navbar div {
      margin: inherit;
      background-color: rgb(255,255,255);
    }
    .navbar-brand {
      padding: 10px;
    }
    button{
      margin-right: 30px;
    }
    button:focus {
      outline: 1px dotted;
      outline: auto 5px;
    }
  }

